<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp15"
        android:text="@string/contact_seller_msg1"
        android:textColor="@color/content_text"
        android:textSize="@dimen/font_size_smallest"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp30"
        android:layout_marginStart="@dimen/dp30"
        android:layout_marginTop="@dimen/dp8"
        android:gravity="center"
        android:text="@string/contact_seller_msg2"
        android:textColor="@color/content_text"
        android:textSize="@dimen/font_size_smallest" />

    <View style="@style/Line" />

    <TextView
        android:id="@+id/tv_send_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:text="@string/contact_seller_email"
        android:textColor="@color/color_58"
        android:textSize="@dimen/font_size_normal" />

    <View style="@style/Line" />

    <TextView
        android:id="@+id/tv_call_telephone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:text="@string/contact_seller_phone"
        android:textColor="@color/color_58"
        android:textSize="@dimen/font_size_normal" />

    <View
        style="@style/Line"
        android:layout_height="@dimen/dp15"
        android:background="#eeeeee" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:layout_marginTop="@dimen/item_divider_height"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:text="@string/contact_seller_cancel"
        android:textColor="@color/color_58"
        android:textSize="@dimen/font_size_normal"
        android:textStyle="bold" />

</LinearLayout>