<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentTop="true"
        android:background="@color/title_background"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="@dimen/title_width"
            android:layout_height="@dimen/title_height"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:ems="80"
                android:gravity="center"
                android:scrollHorizontally="false"
                android:textColor="@color/title_text"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold"
                android:text="Delice house"
                android:singleLine="true" />

            <TextView
                android:id="@+id/sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:ems="30"
                android:gravity="center"
                android:textColor="@color/title_text"
                android:textSize="@dimen/font_size_12"
                android:text="Votre compte" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_return"
            android:onClick="goReturn"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/title_left_width"
            android:layout_height="@dimen/title_height">

            <TextView
                android:id="@+id/tv_return"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text=""
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_size_largest" />
        </LinearLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider_height"
            android:layout_alignParentBottom="true"
            android:background="@color/color_cb" />

    </RelativeLayout>

    <fr.ws.reader.view.ObservableScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_lastname"
                style="@style/InputEditText"
                android:hint="@string/user_lastname" />

            <EditText
                android:id="@+id/et_firstname"
                style="@style/InputEditText"
                android:hint="@string/user_firstname" />

            <EditText
                android:id="@+id/et_telephone"
                style="@style/InputEditText"
                android:hint="@string/user_telephone"
                android:inputType="phone" />


            <EditText
                android:id="@+id/et_address"
                style="@style/InputEditText"
                android:layout_height="@dimen/dp80"
                android:gravity="start"
                android:hint="@string/user_address"
                android:paddingBottom="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:singleLine="false" />

            <EditText
                android:id="@+id/et_zip"
                style="@style/InputEditText"
                android:hint="@string/user_zip" />

            <EditText
                android:id="@+id/et_city"
                style="@style/InputEditText"
                android:hint="@string/user_city" />


            <EditText
                android:id="@+id/et_email"
                style="@style/InputEditText"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp15"
                android:layout_marginTop="@dimen/dp40"
                android:gravity="end"
                android:text="*Champs obligatoires"
                android:textColor="#878787"
                android:textStyle="italic" />



            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp20"
                android:background="@color/transparent" />
        </LinearLayout>
    </fr.ws.reader.view.ObservableScrollView>

</LinearLayout>
