<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/abs_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp80"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <fr.it8.asiansoupe.view.CircularImage
            android:id="@+id/iv_user_head"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_marginStart="@dimen/dp15" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:textAllCaps="true"
            android:textSize="@dimen/font_size_small"
            android:textStyle="bold"
            tools:text="CHEN" />
    </LinearLayout>

    <fr.it8.asiansoupe.view.ObservableScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                style="@style/Line"
                android:layout_marginEnd="@dimen/dp8"
                android:layout_marginStart="@dimen/dp8" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp20"
                    android:text="@string/other_last_name" />

                <TextView
                    android:id="@+id/tv_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp15"
                    android:textStyle="bold"
                    tools:text="Chen" />

                <View
                    style="@style/LineMarginLeft"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/dp15" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp20"
                    android:text="@string/other_first_name" />

                <TextView
                    android:id="@+id/tv_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp15"
                    android:textStyle="bold"
                    tools:text="Chen" />

                <View
                    style="@style/LineMarginLeft"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/dp15" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp20"
                    android:text="@string/other_telephone" />

                <TextView
                    android:id="@+id/tv_telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp15"
                    android:textStyle="bold"
                    tools:text="Chen" />

                <View
                    style="@style/LineMarginLeft"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/dp15" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp20"
                    android:text="@string/other_email" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp15"
                    android:textStyle="bold"
                    tools:text="Chen" />

                <View
                    style="@style/LineMarginLeft"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/dp8" />
            </RelativeLayout>

        </LinearLayout>
    </fr.it8.asiansoupe.view.ObservableScrollView>

</LinearLayout>
